# tanebi

./: .gitignore  CLAUDE.md  README.md  config.yaml  config.yaml.example  config.yaml.template  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: aggregator.md  checkpoint.md  decomposer.md  learner.md  tanebi-worker.md
.claude/hooks/: routing-hook.sh
adapters/claude-native/: CLAUDE.md  README.md
adapters/subprocess/: README.md  orchestrator.sh  parse_plan.sh  run_worker.sh
config/: persona_schema.yaml
docs/: adapter-guide.md  adapter-interface.md  checkpoint-design.md  design.md  executor-design.md  getting-started.md  ideas.md  learning-engine.md  listener-flow.md  mutation-design.md  native-flow.md  roadmap.md  routing.md
events/: schema.yaml
knowledge/_meta/: distill_log.yaml
knowledge/few_shot_bank/: _format.md
modules/trust/: README.md  trust_module.sh
presets/: full.yaml  minimal.yaml  standard.yaml
roles/: backend_specialist_v1.yaml  devil_advocate_v1.yaml  generalist_v1.yaml  test_writer_v1.yaml
scripts/: _evolve_helper.py  _fitness.py  command_executor.sh  component_loader.sh  emit_event.sh  estimate_cost.sh  evolve.sh  expand_template.sh  new_cmd.sh  persona_ops.sh  send_feedback.sh  setup.sh  show_evolution.sh  subprocess_worker.sh  tanebi  tanebi-callback.sh  tanebi_config.py  tanebi_config.sh  tanebi_lock.sh
templates/: aggregator.md  checkpoint.md  decomposer.md  worker_base.md
tests/: conftest.py  e2e_test_plan.md  e2e_test_results.md  test_distill.py  test_inject.py  test_signal.py
work/: index.yaml
(+63 files in other folders)
